<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_frame_1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_serif_pro"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/Profile"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="30dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_baseline_supervised_user_circle_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Hathras,Uttar Pradesh"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="#E5E5E5"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E5E5E5"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E5E5E5"
                    android:elevation="25dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp">

                    <ImageView
                        android:id="@+id/ivUserName"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        app:srcCompat="@drawable/ic_group_2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp">

                        <TextView
                            android:id="@+id/tvUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/UserName"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvAnuj"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="anujagr2001" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDOB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E5E5E5"
                    android:elevation="20dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp">

                    <ImageView
                        android:id="@+id/ivDOB"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        app:srcCompat="@drawable/ic_birthday_1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp">

                        <TextView
                            android:id="@+id/tvDOB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/DateOfBirth"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="16/08/2000" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E5E5E5"
                    android:elevation="15dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp">

                    <ImageView
                        android:id="@+id/ivGender"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        app:srcCompat="@drawable/ic_gender" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp">

                        <TextView
                            android:id="@+id/tvGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Gender"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvMale"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Male" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E5E5E5"
                    android:elevation="10dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp">

                    <ImageView
                        android:id="@+id/ivEmail"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        app:srcCompat="@drawable/ic_address_1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp">

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/EmailAddress"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E5E5E5"
                    android:elevation="5dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp">

                    <ImageView
                        android:id="@+id/ivLink"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        app:srcCompat="@drawable/ic_group" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#E5E5E5"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp">

                        <TextView
                            android:id="@+id/tvLink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ProfileLink"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvProfile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="asdfghj9817kleuooepw" />

                    </LinearLayout>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/FrLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_button_logout">

                    <TextView
                        android:id="@+id/tvLogout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="5dp"
                        android:text="@string/Logout"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp">

                    </TextView>

                </FrameLayout>


                <!--            <androidx.cardview.widget.CardView-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_marginStart="20dp"-->
                <!--                android:layout_marginTop="15dp"-->
                <!--                android:layout_marginEnd="20dp"-->
                <!--                android:layout_marginBottom="15dp"-->
                <!--                android:background="@drawable/custom_button_logout"-->
                <!--                app:cardCornerRadius="15dp"-->
                <!--                app:layout_constraintBottom_toBottomOf="parent"-->
                <!--                app:layout_constraintEnd_toEndOf="parent"-->
                <!--                app:layout_constraintStart_toStartOf="parent">-->

                <!--                <TextView-->
                <!--                    android:id="@+id/textView7"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="center_horizontal"-->
                <!--                    android:text="Logout"-->
                <!--                    android:textSize="18sp" />-->
                <!--            </androidx.cardview.widget.CardView>-->


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>